--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "swagger-ui-express": "^5.0.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev":"node index.js"
   },
   "repository": {
     "type": "git",
